# turd

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
ext/: CMakeLists.txt
test/data/: config.yml
test/data/pipelines/: default_pipeline.yml
turd/: CMakeLists.txt  main.cpp  pch.hpp
turd/core/: Application.cpp  Application.hpp  ByteBuffer.cpp  ByteBuffer.hpp  Collections.hpp  Environment.cpp  Environment.hpp  EventBus.cpp  EventBus.hpp  IO.cpp  IO.hpp  Log.cpp  Log.hpp  Platform.cpp  Platform.hpp  Settings.cpp  Settings.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp
turd/entity/: Entity.cpp  Entity.hpp
turd/managers/: EntityManager.cpp  EntityManager.hpp  MaterialManager.cpp  MaterialManager.hpp  PipelineManager.cpp  PipelineManager.hpp
turd/systems/: ISystem.hpp
turd/systems/input/: InputSystem.cpp  InputSystem.hpp
turd/systems/render/: RenderSystem.cpp  RenderSystem.hpp
turd/systems/render/dx12/: Adapter.cpp  Adapter.hpp  ConstantBuffer.cpp  ConstantBuffer.hpp  DX12State.cpp  DX12State.hpp  Frame.cpp  Frame.hpp  Pipeline.cpp  Pipeline.hpp  SRVHeap.cpp  SRVHeap.hpp  UploadBuffer.cpp  UploadBuffer.hpp
