set(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS")
set(BUILD_TESTING OFF CACHE BOOL "BUILD_TESTING")
set(BUILD_TESTING_STATIC OFF CACHE BOOL "BUILD_TESTING_STATIC")
set(BUILD_TESTING_SHARED OFF CACHE BOOL "BUILD_TESTING_SHARED")

set(SOL2_TESTS_SINGLE OFF CACHE BOOL "SOL2_TESTS_SINGLE")
set(SOL2_TESTS_SINGLE_GENERATED OFF CACHE BOOL "SOL2_TESTS_SINGLE_GENERATED")
set(SOL2_TESTS_SINGLE_GENERATED OFF CACHE BOOL "SOL2_TESTS_SINGLE_GENERATED")
set(SOL2_TESTS_DYNAMIC_LOADING_EXAMPLES OFF CACHE BOOL "SOL2_TESTS_DYNAMIC_LOADING_EXAMPLES")
#set(BUILD_LUA_AS_DLL OFF CACHE BOOL "BUILD_LUA_AS_DLL")
set(SOL2_TESTS_EXAMPLES OFF CACHE BOOL "SOL2_TESTS_EXAMPLES")
set(SOL2_GENERATE_SINGLE ON CACHE BOOL "SOL2_GENERATE_SINGLE")
add_subdirectory(sol2)

set(BUILD_BULLET2_DEMOS OFF CACHE BOOL "BUILD_BULLET2_DEMOS")
set(BUILD_CPU_DEMOS OFF CACHE BOOL "BUILD_CPU_DEMOS")
set(BUILD_OPENGL3_DEMOS OFF CACHE BOOL "BUILD_OPENGL3_DEMOS")
set(BUILD_UNIT_TESTS OFF CACHE BOOL "BUILD_UNIT_TESTS")
set(BUILD_ENET OFF CACHE BOOL "BUILD_ENET")
set(BUILD_EGL OFF CACHE BOOL "BUILD_EGL")
set(USE_GLUT OFF CACHE BOOL "USE_GLUT")
set(USE_GRAPHICAL_BENCHMARK OFF CACHE BOOL "USE_GRAPHICAL_BENCHMARK")
add_subdirectory(bullet3)

set(BUILD_DX11 OFF CACHE BOOL "BUILD_DX11")
add_subdirectory(DirectXTex)

set(YAML_CPP_BUILD_TOOLS OFF CACHE BOOL "YAML_CPP_BUILD_TOOLS")
set(YAML_CPP_BUILD_TESTS OFF CACHE BOOL "YAML_CPP_BUILD_TESTS")
add_subdirectory(yaml-cpp)

set(ENABLE_UNIT_TESTS OFF CACHE BOOL "ENABLE_UNIT_TESTS")
set(ENABLE_SAMPLES OFF CACHE BOOL "ENABLE_SAMPLES")
add_subdirectory(glTF-SDK)
